tests/fixtures/syntax/invalid/write_step_content_fixture_reference.repor
case "write step content requires a text value, not a fixture reference" {
  write <"out.txt"> @"expected.txt"
  $ true
  assert {
    exit 0
  }
}
